--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ http://www.tooplate.com/view/2098-health
                                         <h3>Nate Baston</h3>
                                         <p>General Principal</p>
                                         <div class="team-contact-info">
-                                             <p><i class="fa fa-phone"></i> +91+917300318333</p>
+                                             <p><i class="fa fa-phone"></i> +917300318333</p>
                                              <p><i class="fa fa-envelope-o"></i> <a href="#">general@company.com</a></p>
                                         </div>
                                         <ul class="social-icon">
@@ -200,7 +200,7 @@ http://www.tooplate.com/view/2098-health
                                         <h3>Jason Stewart</h3>
                                         <p>Pregnancy</p>
                                         <div class="team-contact-info">
-                                             <p><i class="fa fa-phone"></i>+91+917300318333</p>
+                                             <p><i class="fa fa-phone"></i>+917300318333</p>
                                              <p><i class="fa fa-envelope-o"></i> <a href="#">pregnancy@company.com</a></p>
                                         </div>
                                         <ul class="social-icon">
@@ -221,7 +221,7 @@ http://www.tooplate.com/view/2098-health
                                         <h3>Miasha Nakahara</h3>
                                         <p>Cardiology</p>
                                         <div class="team-contact-info">
-                                             <p><i class="fa fa-phone"></i>+91+917300318333</p>
+                                             <p><i class="fa fa-phone"></i>+917300318333</p>
                                              <p><i class="fa fa-envelope-o"></i> <a href="#">cardio@company.com</a></p>
                                         </div>
                                         <ul class="social-icon">
@@ -401,7 +401,7 @@ http://www.tooplate.com/view/2098-health
                               <p>Fusce at libero iaculis, venenatis augue quis, pharetra lorem. Curabitur ut dolor eu elit consequat ultricies.</p>
 
                               <div class="contact-info">
-                                   <p><i class="fa fa-phone"></i>+91+917300318333</p>
+                                   <p><i class="fa fa-phone"></i>+917300318333</p>
                                    <p><i class="fa fa-envelope-o"></i> <a href="#">info@company.com</a></p>
                               </div>
                          </div>
